--- a/templateFiles/test.html
+++ b/templateFiles/test.html
@@ -44,8 +44,9 @@
             <div class="big box">
                 <form action="{{url_for('predict')}}" method="POST">
                     <h4>Copy/paste an email message to detect spam</h4>
-                    <textarea id="email" name="email" rows="11" cols="70"></textarea>
-                    <br />
+                    <br>
+                    <textarea id="email" name="email" rows="11" cols="70">{{ request.form.email if request.method == 'POST' else '' }}</textarea>
+                    <br>
                     <input type="submit" name="" value="Analyze" class="btn btn-info" />
 
                 </form>
@@ -54,29 +55,45 @@
 
         <div class="right-element">
             <div class="result box">
-                <h5>Prediction: {% if prediction is defined %} {% if prediction == 1 %} <span
+                <h5>Prediction {% if prediction is defined %} {% if prediction == 1 %} <span
                         style="color: red;">Spam</span>
                     {% elif prediction == 0 %}
                     <span style="color: green;">Not Spam</span> {% endif %} {% endif %}
                 </h5>
-                <h5>Probability of being Spam: {{percentage}} %</h5>
-                <h5>Word Count: {{result}}</h5>
+                <h5>Spam Probability {{percentage}} %</h5>
+                <h5>Word Count {{result}}</h5>
+                <br>
+                <h5>Emotional Analysis:</h5>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Emotion Label</th>
+                            <th>Score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for label, score in emo_data %}
+                        <tr>
+                            <td>{{ label }}</td>
+                            <td>{{ score }}%</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
 
-
-    <footer class="py-3 my-4 bg-dark">
+    <footer class="py-3 mt-4 bg-dark ">
         <ul class="nav justify-content-center border-bottom pb-3 mb-0">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Home</a></li>
+            <li class="nav-item"><a href="https://ashlarglobal.com" class="nav-link px-2 text-white">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-white">About</a></li>
+            <li class="nav-item"><a href="https://ashlarglobal.com/about.html"
+                    class="nav-link px-2 text-white">About</a></li>
         </ul>
         <p class="text-center text-white">© 2023 Ashlar</p>
     </footer>
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
