--- a/templateFiles/test.html
+++ b/templateFiles/test.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='test.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='testing.css') }}">
 </head>
 
 <body>
@@ -45,7 +45,8 @@
                 <form action="{{url_for('predict')}}" method="POST">
                     <h4>Copy/paste an email message to detect spam</h4>
                     <br>
-                    <textarea id="email" name="email" rows="11" cols="70">{{ request.form.email if request.method == 'POST' else '' }}</textarea>
+                    <textarea id="email" name="email" rows="11"
+                        cols="70">{{ request.form.email if request.method == 'POST' else '' }}</textarea>
                     <br>
                     <input type="submit" name="" value="Analyze" class="btn btn-info" />
 
@@ -84,6 +85,90 @@
         </div>
     </section>
 
+
+    <section class="box-text">
+        <div class="legend-box">
+            <h3>Legend</h3>
+            <table>
+                <tr>
+                    <td style="background: #BD62FF;"></td>
+                    <td>Admiration</td>
+                    <td style="background: #FFF17B;"></td>
+                    <td>Amusement</td>
+                    <td style="background: #FF6B6B;"></td>
+                    <td>Anger</td>
+                    <td style="background: #FFA954;"></td>
+                    <td>Annoyance</td>
+                </tr>
+                <tr>
+                    <td style="background: #7DFF7D;"></td>
+                    <td>Approval</td>
+                    <td style="background: #FFD4E8;"></td>
+                    <td>Caring</td>
+                    <td style="background: #E0E0E0;"></td>
+                    <td>Confusion</td>
+                    <td style="background: #A2CDFF;"></td>
+                    <td>Curiosity</td>
+                </tr>
+                <tr>
+                    <td style="background: #FF6F85;"></td>
+                    <td>Desire</td>
+                    <td style="background: #BEBEBE;"></td>
+                    <td>Disappointment</td>
+                    <td style="background: #724BA3;"></td>
+                    <td>Disapproval</td>
+                    <td style="background: #B8C375;"></td>
+                    <td>Disgust</td>
+                </tr>
+                <tr>
+                    <td style="background: #FF9CC6;"></td>
+                    <td>Embarrassment</td>
+                    <td style="background: #FFC65C;"></td>
+                    <td>Excitement</td>
+                    <td style="background: #936DBF;"></td>
+                    <td>Fear</td>
+                    <td style="background: #FFEE8C;"></td>
+                    <td>Gratitude</td>
+                </tr>
+                <tr>
+                    <td style="background: #3B40A3;"></td>
+                    <td>Grief</td>
+                    <td style="background: #FFF960;"></td>
+                    <td>Joy</td>
+                    <td style="background: #FF7878;"></td>
+                    <td>Love</td>
+                    <td style="background: #CDDFF0;"></td>
+                    <td>Nervousness</td>
+                </tr>
+                <tr>
+                    <td style="background: #B8E2FA;"></td>
+                    <td>Optimism</td>
+                    <td style="background: #FFEE8C;"></td>
+                    <td>Pride</td>
+                    <td style="background: #FFFFB3;"></td>
+                    <td>Realization</td>
+                    <td style="background: #8FFF8F;"></td>
+                    <td>Relief</td>
+                </tr>
+                <tr>
+                    <td style="background: #5DA5A5;"></td>
+                    <td>Remorse</td>
+                    <td style="background: #aac72a;"></td>
+                    <td>Sadness</td>
+                    <td style="background: #FF9AFF;"></td>
+                    <td>Surprise</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="highlighted-text">
+            <h3>Highlighted text for Emotions</h3>
+            <p>{{ highlighted_text | safe }}</p>
+        </div>
+    </section>
+
     <footer class="py-3 mt-4 bg-dark ">
         <ul class="nav justify-content-center border-bottom pb-3 mb-0">
             <li class="nav-item"><a href="https://ashlarglobal.com" class="nav-link px-2 text-white">Home</a></li>
@@ -91,13 +176,11 @@
             <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
             <li class="nav-item"><a href="https://ashlarglobal.com/about.html"
                     class="nav-link px-2 text-white">About</a></li>
+            <li class="nav-item"><a href="https://ashlarglobal.com/contact.html"
+                    class="nav-link px-2 text-white">Contact</a></li>
         </ul>
-        <p class="text-center text-white">© 2023 Ashlar</p>
+        <p class="text-center text-white">&copy; 2023 Spam Detect. All rights reserved.</p>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
