--- a/templateFiles/test.html
+++ b/templateFiles/test.html
@@ -5,17 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spam Detect</title>
-    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
-    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <!-- Local Files -->
-    <script src="{{ url_for('static', filename='test.js') }}"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='test.css') }}" />
-    <!-- Libraries -->
+
+    <script src="{{ url_for('static', filename='testing.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='testing.css') }}" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
@@ -71,16 +68,13 @@
 
         <div class="right-element">
             <div id="result-box-section" class="result box">
-                <h5>
-                    Prediction: {% if prediction == 1 %}<span style="color: red">Spam</span>{% elif prediction == 0 %}
-                    <span style="color: green">Not Spam</span>{% endif %}
-                </h5>
+                <h5>Prediction:</h5>
                 <h5>Spam Probability:</h5>
                 <div class="progress-bar">
                     <div class="progress" id="progress-bar" style="width: 0%"></div>
                 </div>
                 <br>
-                <h5>Word Count: {{ result }}</h5>
+                <h5>Word Count:</h5>
                 <br />
                 <h5>Emotional Analysis:</h5>
             </div>
@@ -125,6 +119,15 @@
             <form action="{{ url_for('highlight_text') }}" method="post" id="highlight-form">
                 <input type="hidden" name="email" value="{{ email }}" />
             </form>
+        </div>
+    </section>
+
+    <section class = 'rewrite-text-box'>
+        <div class= "rewrite-text" id = "rewrite-text-section">
+            <h3>Rewrite Text</h3>
+            <br />
+            <pre id="rewritten-text" style="white-space: pre-wrap">{{ rewrite_text }}</pre>
+            <input type="button" id="rewrite-btn" value="Rewrite" class="btn btn-info" style="display: inline-block; width: 100px"/>
         </div>
     </section>
 
