--- a/templateFiles/test.html
+++ b/templateFiles/test.html
@@ -11,8 +11,8 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <script src="{{ url_for('static', filename='testing.js') }}"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='testing.css') }}" />
+    <script src="{{ url_for('static', filename='test.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='test.css') }}" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
