--- a/templateFiles/test.html
+++ b/templateFiles/test.html
@@ -5,15 +5,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spam Detect</title>
+
+    <!-- Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/29.2.0/classic/ckeditor.js"></script>
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
+    <!-- Local Files -->
     <script src="{{ url_for('static', filename='test.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='test.css') }}" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -35,31 +43,45 @@
         </div>
     </nav>
 
-    <section class="description box">
-        <h1>Spam Detection</h1>
-        <p>
-            This project uses machine learning algorithms like Naïve Bayes to
-            classify emails as either spam or legitimate. By implementing
-            preprocessing techniques such as Count Vectorizer and TF-IDF Vectorizer,
-            the project aims to accurately differentiate between the two types of
-            emails. The trained model provides an efficient solution for
-            automatically filtering and categorizing incoming emails, enhancing
-            productivity and minimizing the impact of spam.
-        </p>
-    </section>
-
-    <section class="container">
+    <section class="container mb-2">
         <div class="left-element">
+            <section class="box-text">
+                <div class="legend-box">
+                    <h3
+                        style="background-image: linear-gradient(180deg, transparent 60%, #21c9d4 60%);display: inline; font-weight: 600;">
+                        Legend</h3>
+                    <div class="mt-4">
+                        <div class="highlight d-flex justify-content-between">
+                            <p class="text-highlight" style="background: #ff9aff">Affectionate</p>
+                            <p class="text-highlight" style="background: #ccff99">Energetic</p>
+                            <p class="text-highlight" style="background: #ff7878">Annoyance</p>
+                            <p class="text-highlight" style="background: #ffa954">Contentment</p>
+                        </div>
+                        <div class="highlight d-flex justify-content-between">
+                            <p class="text-highlight mb-0" style="background: #a2cdff ">Sadness</p>
+                            <p class="text-highlight mb-0" style="background: #7dff7d">Inquisitive</p>
+                            <p class="text-highlight mb-0" style="background: #5da5a5">Reflective</p>
+                            <p class="text-highlight mb-0" style="background: #724ba3">Apprehensive</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <div class="big box">
                 <form id="emailForm">
-                    <h4>Copy/paste an email message to detect spam</h4>
+                    <h4 style="font-weight: 600;">Copy/paste an email message to detect spam</h4>
                     <br />
-                    <textarea id="email" name="email" rows="11" cols="70" required>{{ request.form.email if request.method == 'POST' else '' }}</textarea>
+                    <textarea id="email" name="email" rows="11" cols="70"
+                        required>{{ request.form.email if request.method == 'POST' else '' }}</textarea>
                     <br />
                     <div style="text-align: center">
                         <input type="button" id="analyze-btn" value="Analyze" class="btn btn-info"
                             style="display: inline-block; width: 100px" />
                         <input type="button" id="highlight-btn" value="Highlight" class="btn btn-info"
+                            style="display: inline-block; width: 100px" />
+                        <input type="button" id="rewrite-btn" value="Rewrite" class="btn btn-info"
+                            style="display: inline-block; width: 100px" />
+                        <input type="button" id="reanalysis-btn" value="Reanalysis" class="btn btn-info"
                             style="display: inline-block; width: 100px" />
                     </div>
                 </form>
@@ -68,66 +90,63 @@
 
         <div class="right-element">
             <div id="result-box-section" class="result box">
-                <h5>Prediction:</h5>
+                <h5>
+                    Prediction: {% if prediction == 1 %}<span style="color: red">Spam</span>{% elif prediction == 0 %}
+                    <span style="color: green">Not Spam</span>{% endif %}
+                </h5>
                 <h5>Spam Probability:</h5>
                 <div class="progress-bar">
                     <div class="progress" id="progress-bar" style="width: 0%"></div>
                 </div>
                 <br>
-                <h5>Word Count:</h5>
+                <h5>Word Count: {{ result }}</h5>
                 <br />
-                <h5>Emotional Analysis:</h5>
+                <h5 class="mt-4">Emotional Analysis:</h5>
             </div>
         </div>
     </section>
 
-    <section class="box-text">
-        <div class="legend-box">
-            <h3>Legend</h3>
-            <table>
-                <tr>
-                    <td style="background: #ff9aff"></td>
-                    <td style="padding-right: 20px">Affectionate</td>
-                    <td style="background: #ccff99"></td>
-                    <td>Energetic</td>
-                </tr>
-                <tr>
-                    <td style="background: #ff7878"></td>
-                    <td style="padding-right: 20px">Annoyance</td>
-                    <td style="background: #ffa954"></td>
-                    <td>Contentment</td>
-                </tr>
-                <tr>
-                    <td style="background: #a2cdff"></td>
-                    <td style="padding-right: 20px">Sadness</td>
-                    <td style="background: #7dff7d"></td>
-                    <td>Inquisitive</td>
-                </tr>
-                <tr>
-                    <td style="background: #5da5a5"></td>
-                    <td style="padding-right: 20px">Reflective</td>
-                    <td style="background: #724ba3"></td>
-                    <td>Apprehensive</td>
-                </tr>
-            </table>
-        </div>
-
-        <div id="highlighted-text-section" class="highlighted-text">
-            <h3>Highlighted text for Emotions</h3>
-            <br />
-            <pre id="highlighted-text" style="white-space: pre-wrap">{{ highlighted_text }}</pre>
-            <form action="{{ url_for('highlight_text') }}" method="post" id="highlight-form">
-                <input type="hidden" name="email" value="{{ email }}" />
-            </form>
+    <section class="highlight-texts">
+        <div class="question-answer__accordion">
+            <div class="question">
+                <h3 class="title__question">
+                    Emotion Highlighting
+                </h3>
+            </div>
+            <div class="answer">
+                <section class='highlight-text-box mt-3'>
+                    <div class="highlight-text w-100" id="highlight-text-section">
+                        <h3
+                            style="background-image: linear-gradient(180deg, transparent 60%, #21c9d4 60%);display: inline;">
+                            Emotion Highlighting</h3>
+                        <br />
+                        <pre id="highlighted-text" style="white-space: pre-wrap">{{ highlighted_text }}</pre>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </section>
 
-    <section class = 'rewrite-text-box'>
-        <div class= "rewrite-text" id = "rewrite-text-section">
-            <h3>Rewrite Text</h3>
-            <br />
-            <pre id="rewritten-text" style="white-space: pre-wrap">{{ rewrite_text }}</pre>
-            <input type="button" id="rewrite-btn" value="Rewrite" class="btn btn-info" style="display: inline-block; width: 100px"/>
+    <section class="highlight-texts">
+        <div class="question-answer__accordion">
+            <div class="question">
+                <h3 class="title__question">
+                    Rewrite Text
+                </h3>
+            </div>
+            <div class="answer">
+                <section class='rewrite-text-box mt-3'>
+                    <div class="rewrite-text w-100" id="rewrite-text-section">
+                        <h3
+                            style="background-image: linear-gradient(180deg, transparent 60%, #21c9d4 60%);display: inline;">
+                            Rewrite Text</h3>
+                        <br />
+                        <pre id="rewritten-text" style="white-space: pre-wrap;">{{ rewrite_text }}</pre>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </section>
 
@@ -153,6 +172,23 @@
             &copy; 2023 Spam Detect. All rights reserved.
         </p>
     </footer>
+
+    <script>
+        this.addEventListener("DOMContentLoaded", () => {
+            const questions = document.querySelectorAll(".question")
+            questions.forEach((question) => question.addEventListener("click", () => {
+
+                if (question.parentNode.classList.contains("active")) {
+                    question.parentNode.classList.toggle("active")
+                }
+                else {
+                    questions.forEach(question => question.parentNode.classList.remove("active"))
+                    question.parentNode.classList.add("active")
+                }
+
+            }))
+        }) 
+    </script>
 </body>
 
 </html>
