--- a/templateFiles/test.html
+++ b/templateFiles/test.html
@@ -81,8 +81,6 @@
                             style="display: inline-block; width: 100px" />
                         <input type="button" id="rewrite-btn" value="Rewrite" class="btn btn-info"
                             style="display: inline-block; width: 100px" />
-                        <input type="button" id="reanalysis-btn" value="Reanalysis" class="btn btn-info"
-                            style="display: inline-block; width: 100px" />
                     </div>
                 </form>
             </div>
@@ -107,13 +105,13 @@
     </section>
 
     <section class="highlight-texts">
-        <div class="question-answer__accordion">
+        <div class="highlight-question-answer__accordion">
             <div class="question">
                 <h3 class="title__question">
                     Emotion Highlighting
                 </h3>
             </div>
-            <div class="answer">
+            <div class="highlight-answer">
                 <section class='highlight-text-box mt-3'>
                     <div class="highlight-text w-100" id="highlight-text-section">
                         <h3
@@ -129,13 +127,13 @@
     </section>
 
     <section class="highlight-texts">
-        <div class="question-answer__accordion">
+        <div class="rewrite-question-answer__accordion">
             <div class="question">
                 <h3 class="title__question">
                     Rewrite Text
                 </h3>
             </div>
-            <div class="answer">
+            <div class="rewrite-answer">
                 <section class='rewrite-text-box mt-3'>
                     <div class="rewrite-text w-100" id="rewrite-text-section">
                         <h3
@@ -144,10 +142,15 @@
                         <br />
                         <pre id="rewritten-text" style="white-space: pre-wrap;">{{ rewrite_text }}</pre>
                         </div>
+                        <input type="button" id="reanalysis-btn" value="Reanalysis" class="btn btn-info"
+                            style="display: inline-block; width: 100px" />
                     </div>
                 </section>
             </div>
         </div>
+    </section>
+    </div>
+    </div>
     </section>
 
     <footer class="py-3 mt-4 bg-dark">
@@ -175,19 +178,18 @@
 
     <script>
         this.addEventListener("DOMContentLoaded", () => {
-            const questions = document.querySelectorAll(".question")
-            questions.forEach((question) => question.addEventListener("click", () => {
+            const highlightQuestion = document.querySelector(".highlight-question-answer__accordion .question");
+            const rewriteQuestion = document.querySelector(".rewrite-question-answer__accordion .question");
 
-                if (question.parentNode.classList.contains("active")) {
-                    question.parentNode.classList.toggle("active")
-                }
-                else {
-                    questions.forEach(question => question.parentNode.classList.remove("active"))
-                    question.parentNode.classList.add("active")
-                }
+            highlightQuestion.addEventListener("click", () => {
+                highlightQuestion.parentNode.classList.toggle("active");
+            });
 
-            }))
-        }) 
+            rewriteQuestion.addEventListener("click", () => {
+                rewriteQuestion.parentNode.classList.toggle("active");
+            });
+        });
+
     </script>
 </body>
 
